--- a/k8s/namespaces/probate/probate-cron-smee-and-ford-extract/aat-00.yaml
+++ b/k8s/namespaces/probate/probate-cron-smee-and-ford-extract/aat-00.yaml
@@ -12,5 +12,5 @@ spec:
       environment: aat
     job:
       environment:
-        BLOB_STORAGE_SMEEANDFORD_FEATURE_ENABLED: true
+        BLOB_STORAGE_SMEEANDFORD_FEATURE_ENABLED: false
       schedule: 0/10 * * * *
