Moving neuvector pods to nodes that are not running konnectivity-agent

--- a/apps/neuvector/neuvector/perftest/perftest.yaml
+++ b/apps/neuvector/neuvector/perftest/perftest.yaml
@@ -26,6 +26,13 @@ spec:
                         values:
                           - neuvector-controller-pod
                   topologyKey: "kubernetes.io/hostname"
+            requiredDuringSchedulingIgnoredDuringExecution:
+              - labelSelector:
+                  matchExpressions:
+                    - key: app
+                      operator: In
+                      values:
+                        - konnectivity-agent
           nodeAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
               - weight: 1
@@ -53,6 +60,13 @@ spec:
                         values:
                           - neuvector-manager-pod
                   topologyKey: "kubernetes.io/hostname"
+            requiredDuringSchedulingIgnoredDuringExecution:
+              - labelSelector:
+                  matchExpressions:
+                    - key: app
+                      operator: In
+                      values:
+                        - konnectivity-agent
           nodeAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
               - weight: 1
@@ -81,6 +95,13 @@ spec:
                           values:
                             - neuvector-scanner-pod
                     topologyKey: "kubernetes.io/hostname"
+              requiredDuringSchedulingIgnoredDuringExecution:
+                - labelSelector:
+                    matchExpressions:
+                      - key: app
+                        operator: In
+                        values:
+                          - konnectivity-agent
             nodeAffinity:
               preferredDuringSchedulingIgnoredDuringExecution:
                 - weight: 1
