--- a/k8s/namespaces/em/em-npa/prod.yaml
+++ b/k8s/namespaces/em/em-npa/prod.yaml
@@ -9,3 +9,4 @@ spec:
         IDAM_API_BASE_URI: "https://idam-api.platform.hmcts.net"
         OPEN_ID_API_BASE_URI: "https://hmcts-access.service.gov.uk/o"
         ROOT_LOGGING_LEVEL: DEBUG
+        APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: DEBUG
