Add missing topologykey

--- a/apps/neuvector/neuvector/perftest/perftest.yaml
+++ b/apps/neuvector/neuvector/perftest/perftest.yaml
@@ -33,6 +33,7 @@ spec:
                       operator: In
                       values:
                         - konnectivity-agent
+                  topologyKey: "kubernetes.io/hostname"
           nodeAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
               - weight: 1
@@ -67,6 +68,7 @@ spec:
                       operator: In
                       values:
                         - konnectivity-agent
+                  topologyKey: "kubernetes.io/hostname"
           nodeAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
               - weight: 1
@@ -102,6 +104,7 @@ spec:
                         operator: In
                         values:
                           - konnectivity-agent
+                    topologyKey: "kubernetes.io/hostname"
             nodeAffinity:
               preferredDuringSchedulingIgnoredDuringExecution:
                 - weight: 1
