--- a/k8s/namespaces/private-law/prl-cos/ithc.yaml
+++ b/k8s/namespaces/private-law/prl-cos/ithc.yaml
@@ -15,7 +15,7 @@ spec:
       readinessTimeout: 15
       readinessPeriod: 15
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/prl/cos:prod-0bd9ae1-20221018192618 #{"$imagepolicy": "flux-system:prl-cos"}
+      image: hmctspublic.azurecr.io/prl/cos:pr-597-ba8c70c-20221017131443 #{"$imagepolicy": "flux-system:ithc-prl-cos-api"}
       environment:
         FEATURE_EXAMPLE: true
         PRD_API_BASEURL: http://rd-professional-api-ithc.service.core-compute-ithc.internal
