Intall azure workload identity on sbox

--- a/clusters/sbox/base/kustomization.yaml
+++ b/clusters/sbox/base/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - ../../../apps/labs/base/kustomize.yaml
   - ../../../apps/neuvector/base/kustomize.yaml
   - ../../../apps/azureserviceoperator-system/base/kustomize.yaml
+  - ../../../apps/azure-workload-identity-system/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
