utilise aac identity in aat

--- a/apps/civil/aat/base/kustomization.yaml
+++ b/apps/civil/aat/base/kustomization.yaml
@@ -11,4 +11,4 @@ patchesStrategicMerge:
   - ../../../xui/identity/aat.yaml
   - ../../../am/identity/aat.yaml
   - ../../../money-claims/identity/aat.yaml
-  - ../../../aac/identity/identity.yaml
+  - ../../../aac/identity/aat.yaml
