--- a/apps/azure-workload-identity-system/awi/awi-helmrepo.yaml
+++ b/apps/azure-workload-identity-system/awi/awi-helmrepo.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: azure-workload-identity-system
 spec:
   interval: 10m
-  url: https://azure.github.io/azure-workload-identity/charts
+  url: https://azure.github.io
