--- a/apps/azure-workload-identity-system/awi/awi.yaml
+++ b/apps/azure-workload-identity-system/awi/awi.yaml
@@ -11,7 +11,7 @@ spec:
       version: v0.13.0
       sourceRef:
         kind: HelmRepository
-        name: azure-workload-identity
+        name: workload-identity-webhook
         namespace: azure-workload-identity-system
   values:
     azureTenantID: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
