--- a/apps/probate/probate-caveats-fe/probate-caveats-fe.yaml
+++ b/apps/probate/probate-caveats-fe/probate-caveats-fe.yaml
@@ -11,7 +11,8 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/probate/caveats-fe:prod-8ea36d6-20250109124354 #{"$imagepolicy": "flux-system:probate-caveats-fe"}
       environment:
-        VAR_FV2: trig-base-2
+        # Does what it says on the tin - if this changes then all envs should redeploy
+        CHANGE_TO_REDEPLOY_ALL_ENVS: abc
   chart:
     spec:
       chart: ./stable/probate-caveats-fe
