Rename var in aat probate config to redeploy.
This should make it clearer what the intention of this var is.
Also adds it to the aat.yaml files which don't have it.

--- a/apps/probate/probate-back-office/aat.yaml
+++ b/apps/probate/probate-back-office/aat.yaml
@@ -8,7 +8,8 @@ spec:
     java:
       environment:
         CCD_GATEWAY_HOST: https://manage-case.aat.platform.hmcts.net
-        VAR_FV2: aat-01
+        # Does what it says on the tin - if this changes then aat should redeploy
+        CHANGE_TO_REDEPLOY_AAT: abc
         PROBATE_POSTGRESQL_USER: pgadmin
         PROBATE_POSTGRESQL_HOSTNAME: probatemandb-postgres-flexible-db-aat.postgres.database.azure.com
         PROBATE_POSTGRESQL_PORT: 5432
