--- a/apps/probate/probate-caveats-fe/aat.yaml
+++ b/apps/probate/probate-caveats-fe/aat.yaml
@@ -8,3 +8,5 @@ spec:
     nodejs:
       environment:
         EQUALITY_URL: https://pcq.aat.platform.hmcts.net
+        # Does what it says on the tin - if this changes then aat should redeploy
+        CHANGE_TO_REDEPLOY_AAT: abc
