--- a/apps/probate/probate-frontend/aat.yaml
+++ b/apps/probate/probate-frontend/aat.yaml
@@ -10,3 +10,5 @@ spec:
         EQUALITY_URL: https://pcq.aat.platform.hmcts.net
         DYNATRACE_URL: https://js-cdn.dynatrace.com/jstag/17177a07246/bf24054dsx/27a3075f1661d271_complete.js
         EXCEPTED_ESTATE_DATE_OF_DEATH: "2022-01-01"
+        # Does what it says on the tin - if this changes then aat should redeploy
+        CHANGE_TO_REDEPLOY_AAT: abc
