--- a/apps/probate/probate-orchestrator-service/aat.yaml
+++ b/apps/probate/probate-orchestrator-service/aat.yaml
@@ -8,4 +8,5 @@ spec:
     java:
       ingressHost: probate-orchestrator-service-aat.service.core-compute-aat.internal
       environment:
-        VAR_FV2: aat-trig2
+        # Does what it says on the tin - if this changes then aat should redeploy
+        CHANGE_TO_REDEPLOY_AAT: abc
