Rename var in demo probate config to redeploy.
This should make it clearer what the intention of this var is.

--- a/apps/probate/probate-back-office/demo.yaml
+++ b/apps/probate/probate-back-office/demo.yaml
@@ -18,7 +18,8 @@ spec:
         IDAM_SERVICE_HOST: https://idam-api.demo.platform.hmcts.net
         BACK_OFFICE_BASEURL: http://probate-back-office-demo.service.core-compute-demo.internal
         ACA_SERVICE_API_BASEURL: http://aac-manage-case-assignment-demo.service.core-compute-demo.internal
-        VAR_FV2: demo-3
+        # Does what it says on the tin - if this changes then demo should redeploy
+        CHANGE_TO_REDEPLOY_DEMO: abc
       keyVaults:
         probate:
           secrets:
