--- a/apps/probate/probate-caveats-fe/demo.yaml
+++ b/apps/probate/probate-caveats-fe/demo.yaml
@@ -9,4 +9,5 @@ spec:
       enableOAuth: true
       image: hmctspublic.azurecr.io/probate/caveats-fe:pr-1061-c924a24-20250108104244 #{"$imagepolicy": "flux-system:demo-probate-caveats-fe"}
       environment:
-        VAR_FV2: demo-3
+        # Does what it says on the tin - if this changes then demo should redeploy
+        CHANGE_TO_REDEPLOY_DEMO: abc
