--- a/apps/probate/probate-submit-service/demo.yaml
+++ b/apps/probate/probate-submit-service/demo.yaml
@@ -8,7 +8,8 @@ spec:
     java:
       image: hmctspublic.azurecr.io/probate/submit-service:pr-1016-e80559f-20250103124534 #{"$imagepolicy": "flux-system:demo-probate-submit-service"}
       environment:
-        VAR_FV2: demo-3
+        # Does what it says on the tin - if this changes then demo should redeploy
+        CHANGE_TO_REDEPLOY_DEMO: abc
       keyVaults:
         probate:
           secrets:
