--- a/apps/probate/probate-frontend/demo.yaml
+++ b/apps/probate/probate-frontend/demo.yaml
@@ -9,6 +9,7 @@ spec:
       ingressHost: probate.demo.platform.hmcts.net
       image: hmctspublic.azurecr.io/probate/frontend:pr-2265-b197574-20250109102704 #{"$imagepolicy": "flux-system:demo-probate-frontend"}
       environment:
-        VAR_FV2: demo-3
+        # Does what it says on the tin - if this changes then demo should redeploy
+        CHANGE_TO_REDEPLOY_DEMO: abc
         DYNATRACE_URL: https://js-cdn.dynatrace.com/jstag/17177a07246/bf24054dsx/27a3075f1661d271_complete.js
         EXCEPTED_ESTATE_DATE_OF_DEATH: "2022-01-01"
