--- a/apps/probate/probate-caveats-fe/ithc.yaml
+++ b/apps/probate/probate-caveats-fe/ithc.yaml
@@ -9,3 +9,5 @@ spec:
       environment:
         EQUALITY_URL: https://pcq.ithc.platform.hmcts.net
         LAUNCHDARKLY_ENABLED: true
+        # Does what it says on the tin - if this changes then ithc should redeploy
+        CHANGE_TO_REDEPLOY_ITHC: abc
