--- a/apps/probate/probate-orchestrator-service/ithc.yaml
+++ b/apps/probate/probate-orchestrator-service/ithc.yaml
@@ -8,4 +8,5 @@ spec:
     java:
       ingressHost: probate-orchestrator-service-ithc.service.core-compute-ithc.internal
       environment:
-        VAR_FV2: ithc-trig1
+        # Does what it says on the tin - if this changes then ithc should redeploy
+        CHANGE_TO_REDEPLOY_ITHC: abc
