Rename var in perftest probate config to redeploy.
Should be clearer what the intention here is.

--- a/apps/probate/probate-business-service/perftest.yaml
+++ b/apps/probate/probate-business-service/perftest.yaml
@@ -7,4 +7,5 @@ spec:
   values:
     java:
       environment:
-        VAR_FV2: perftest-trig2
+        # Does what it says on the tin - if this changes then perftest should redeploy
+        CHANGE_TO_REDEPLOY_PERFTEST: abc
