--- a/apps/probate/probate-orchestrator-service/perftest.yaml
+++ b/apps/probate/probate-orchestrator-service/perftest.yaml
@@ -8,4 +8,5 @@ spec:
     java:
       ingressHost: probate-orchestrator-service-perftest.service.core-compute-perftest.internal
       environment:
-        VAR_FV2: perftest-trig2
+        # Does what it says on the tin - if this changes then perftest should redeploy
+        CHANGE_TO_REDEPLOY_PERFTEST: abc
