--- a/apps/probate/probate-submit-service/perftest.yaml
+++ b/apps/probate/probate-submit-service/perftest.yaml
@@ -10,4 +10,5 @@ spec:
       environment:
         LOG_LEVEL: INFO
         AUTH_IDAM_CLIENT_BASEURL: "https://idam-api.perftest.platform.hmcts.net"
-        VAR_FV2: prod-trig2
+        # Does what it says on the tin - if this changes then perftest should redeploy
+        CHANGE_TO_REDEPLOY_PERFTEST: abc
