--- a/apps/probate/probate-back-office/perftest.yaml
+++ b/apps/probate/probate-back-office/perftest.yaml
@@ -12,7 +12,8 @@ spec:
         PROBATE_POSTGRESQL_USER: pgadmin
         PROBATE_POSTGRESQL_HOSTNAME: probatemandb-postgres-flexible-db-perftest.postgres.database.azure.com
         PROBATE_POSTGRESQL_PORT: 5432
-        VAR_FV2: perftest-2
+        # Does what it says on the tin - if this changes then perftest should redeploy
+        CHANGE_TO_REDEPLOY_PERFTEST: abc
       keyVaults:
         probate:
           secrets:
