--- a/apps/probate/probate-caveats-fe/perftest.yaml
+++ b/apps/probate/probate-caveats-fe/perftest.yaml
@@ -9,3 +9,5 @@ spec:
       environment:
         EQUALITY_URL: https://pcq.perftest.platform.hmcts.net
         LAUNCHDARKLY_ENABLED: true
+        # Does what it says on the tin - if this changes then perftest should redeploy
+        CHANGE_TO_REDEPLOY_PERFTEST: abc
