--- a/apps/probate/probate-frontend/perftest.yaml
+++ b/apps/probate/probate-frontend/perftest.yaml
@@ -12,7 +12,8 @@ spec:
         EXCEPTED_ESTATE_DATE_OF_DEATH: "2022-01-01"
         WEBCHAT_ENABLED: false
         DYNATRACE_URL: /public/javascripts/document-upload.js
-        VAR_PERF: temp-2
+        # Does what it says on the tin - if this changes then perftest should redeploy
+        CHANGE_TO_REDEPLOY_PERFTEST: abc
       autoscaling:
         enabled: true
         cpu:
