Rename var in prod probate config to redeploy.
Should be clearer what the intention is.

--- a/apps/probate/probate-business-service/prod.yaml
+++ b/apps/probate/probate-business-service/prod.yaml
@@ -8,3 +8,5 @@ spec:
     java:
       environment:
         SERVICES_NOTIFY_INVITEDATA_INVITELINK: https://www.apply-for-probate.service.gov.uk/executors/invitation/
+        # Does what it says on the tin - if this changes then prod should redeploy
+        CHANGE_TO_REDEPLOY_PROD: abc
