--- a/apps/probate/probate-caveats-fe/prod.yaml
+++ b/apps/probate/probate-caveats-fe/prod.yaml
@@ -9,3 +9,5 @@ spec:
       environment:
         IDAM_API_URL: https://idam-api.platform.hmcts.net
         EQUALITY_URL: https://equality-and-diversity.platform.hmcts.net
+        # Does what it says on the tin - if this changes then prod should redeploy
+        CHANGE_TO_REDEPLOY_PROD: abc
