--- a/apps/probate/probate-frontend/prod.yaml
+++ b/apps/probate/probate-frontend/prod.yaml
@@ -12,3 +12,5 @@ spec:
         IDAM_API_URL: https://idam-api.platform.hmcts.net
         EQUALITY_URL: https://equality-and-diversity.platform.hmcts.net
         DYNATRACE_URL: https://js-cdn.dynatrace.com/jstag/17177a07246/bf00910jpo/32b71097c01eeb24_complete.js
+        # Does what it says on the tin - if this changes then prod should redeploy
+        CHANGE_TO_REDEPLOY_PROD: abc
