--- a/apps/probate/probate-submit-service/prod.yaml
+++ b/apps/probate/probate-submit-service/prod.yaml
@@ -9,4 +9,5 @@ spec:
       environment:
         LOG_LEVEL: INFO
         AUTH_IDAM_CLIENT_BASEURL: "https://idam-api.platform.hmcts.net"
-        VAR_FV2: prod-trig2
+        # Does what it says on the tin - if this changes then prod should redeploy
+        CHANGE_TO_REDEPLOY_PROD: abc
