Change idam user start page to process latest users first.

--- a/apps/disposer/disposer-idam-user/prod.yaml
+++ b/apps/disposer/disposer-idam-user/prod.yaml
@@ -16,3 +16,4 @@ spec:
         DISPOSER_IDAM_USER_SIMULATION_MODE: false
         DISPOSER_IDAM_USER_BATCH_SIZE: 100
         DISPOSER_IDAM_USER_REQUESTS_LIMIT: 50000
+        DISPOSER_IDAM_USER_START_PAGE: 13600
