Replace hmctssandbox ACR name in my nodeJS app chart with hmctspublic as this is where the pipeline uploads the image Replace hmctssandbox ACR name in the lab chart generation script with hmctspublic for the same reason

--- a/apps/labs/labs-dawidstrozak-nodejs/image-repo.yaml
+++ b/apps/labs/labs-dawidstrozak-nodejs/image-repo.yaml
@@ -5,4 +5,4 @@ metadata:
   annotations:
     hmcts.github.com/image-registry: hmctssandbox
 spec:
-  image: hmctssandbox.azurecr.io/labs/dawidstrozak-nodejs
+  image: hmctspublic.azurecr.io/labs/dawidstrozak-nodejs
