--- a/apps/labs/labs-dawidstrozak-nodejs/labs-dawidstrozak-nodejs.yaml
+++ b/apps/labs/labs-dawidstrozak-nodejs/labs-dawidstrozak-nodejs.yaml
@@ -16,5 +16,5 @@ spec:
       interval: 1m
   values:
     nodejs:
-      image: hmctssandbox.azurecr.io/labs/dawidstrozak-nodejs:prod-75071c6-20241220151505 # {"$imagepolicy": "flux-system:labs-dawidstrozak-nodejs"}
+      image: hmctspublic.azurecr.io/labs/dawidstrozak-nodejs:prod-75071c6-20241220151505 # {"$imagepolicy": "flux-system:labs-dawidstrozak-nodejs"}
       disableTraefikTls: true
