--- a/apps/nfdiv/nfdiv-cron-create-service-request/aat.yaml
+++ b/apps/nfdiv/nfdiv-cron-create-service-request/aat.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     job:
-      suspend: true
+      suspend: false
       schedule: 0,30 * * * *
     global:
       jobKind: CronJob
