Adding recipes-frontend config, adding deployment to demo for backend and frontend components to test shared infra

--- a/apps/cnp/recipes-backend/aat.yaml
+++ b/apps/cnp/recipes-backend/aat.yaml
@@ -9,6 +9,6 @@ spec:
       ingressHost: recipes-backend-aat.service.core-compute-aat.internal
       testsConfig:
         environment:
-          TEST_URL: http://recipse-backend-java
+          TEST_URL: http://recipes-backend-java
           SLACK_CHANNEL: "platops-build-notices"
           SLACK_NOTIFY_SUCCESS: "false"
