--- a/apps/cnp/recipes-backend/recipes-backend.yaml
+++ b/apps/cnp/recipes-backend/recipes-backend.yaml
@@ -15,3 +15,14 @@ spec:
   values:
     java:
       image: hmctspublic.azurecr.io/recipes/backend:prod-27f0bf4-20241217163623 # {"$imagepolicy": "flux-system:recipes-backend"}
+      keyVaults:
+        "recipeskv":
+          secrets:
+            - name: recipes-backend-POSTGRES-DATABASE-CFT
+              alias: POSTGRES_DATABASE
+            - name: recipes-backend-POSTGRES-HOST
+              alias: POSTGRES_HOST
+            - name: recipes-backend-POSTGRES-USER
+              alias: POSTGRES_USER
+            - name: recipes-backend-POSTGRES-PASS
+              alias: POSTGRES_PASSWORD
