--- a/apps/cnp/demo/base/kustomization.yaml
+++ b/apps/cnp/demo/base/kustomization.yaml
@@ -2,9 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../recipes-frontend/recipes-frontend.yaml
+  - ../../recipes-backend/recipes-backend.yaml
 namespace: cnp
 patches:
   - path: ../../plum-frontend/demo.yaml
   - path: ../../plum-recipe-backend/demo.yaml
   - path: ../../plum-recipe-receiver/demo.yaml
   - path: ../../serviceaccount/demo.yaml
+  - path: ../../recipes-frontend/sbox.yaml
+  - path: ../../recipes-backend/sbox.yaml
