--- a/apps/private-law/prl-ccd-case-migration/prod/00.yaml
+++ b/apps/private-law/prl-ccd-case-migration/prod/00.yaml
@@ -6,9 +6,9 @@ spec:
   releaseName: prl-ccd-case-migration
   values:
     job:
-      schedule: "50 12 29 11 *"
+      schedule: "50 16 07 01 *"
       image: hmctspublic.azurecr.io/prl/ccd-case-migration:prod-39855e9-20241120150012 #{"$imagepolicy": "flux-system:prl-ccd-case-migration"}
       environment:
         MIGRATION_ENABLED: true
-        MIGRATION_CASE_IDS: "1675277835361383,1678959909726305,1680167386717815,1680249137572515,1681378155866845,1682512204354689"
+        MIGRATION_CASE_IDS: "1733340382747857"
         IDAM_API_URL: https://idam-api.platform.hmcts.net
