Amended STRATEGIC_SSO_PROVIDERS_MOJ_USERINFOENDPOINT to graph endpoint for testing.

--- a/apps/idam/idam-api/preview.yaml
+++ b/apps/idam/idam-api/preview.yaml
@@ -31,7 +31,7 @@ spec:
         STRATEGIC_FRONTEND_URL: https://idam-web-public.preview.platform.hmcts.net
         STRATEGIC_API_URL: https://idam-api.preview.platform.hmcts.net
         STRATEGIC_SSO_PROVIDERS_EJUDICIARY_USERINFOENDPOINT: https://login.windows.net/723e4557-2f17-43ed-9e71-f1beb253e546/openid/userinfo
-        STRATEGIC_SSO_PROVIDERS_MOJ_USERINFOENDPOINT: https://login.windows.net/34c125c9-c7f3-486f-a78c-cf762c718831/openid/userinfo
+        STRATEGIC_SSO_PROVIDERS_MOJ_USERINFOENDPOINT: https://graph.microsoft.com/v1.0/me
         STRATEGIC_PULLREQUESTREWRITE_CLIENTS_0: ALL
         IDAM_RATELIMIT_PASSWORDGRANT_ENABLED: false
         IDAM_S2S_URL: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
