--- a/apps/idam/idam-api/aat.yaml
+++ b/apps/idam/idam-api/aat.yaml
@@ -34,7 +34,7 @@ spec:
         SSL_TRUST_HOSTNAMES_2: forgerock-idm.service.core-compute-idam-aat.internal
         SSL_TRUST_HOSTNAMES_3: forgerock-am.service.core-compute-idam-aat.internal
         STRATEGIC_SSO_PROVIDERS_EJUDICIARY_USERINFOENDPOINT: https://login.windows.net/723e4557-2f17-43ed-9e71-f1beb253e546/openid/userinfo
-        STRATEGIC_SSO_PROVIDERS_MOJ_USERINFOENDPOINT: https://login.windows.net/34c125c9-c7f3-486f-a78c-cf762c718831/openid/userinfo
+        STRATEGIC_SSO_PROVIDERS_MOJ_USERINFOENDPOINT: https://graph.microsoft.com/v1.0/me
         STRATEGIC_PULLREQUESTREWRITE_CLIENTS_0: ALL
         LOG_AND_AUDIT_IDAM_ENABLED: true
         IDAM_RATELIMIT_PASSWORDGRANT_ENABLED: true
