enabled demo-01 pod

--- a/apps/et/et-ccd-case-migration/demo-01.yaml
+++ b/apps/et/et-ccd-case-migration/demo-01.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     job:
-      suspend: true
+      suspend: false
       schedule: "*/15 * * * *"
       image: hmctspublic.azurecr.io/et/migration:prod-c87846d-20250108132328 #{"$imagepolicy": "flux-system:et-ccd-case-migration"}
       environment:
