--- a/apps/tax-tribunals/tax-tribunals-application/demo.yaml
+++ b/apps/tax-tribunals/tax-tribunals-application/demo.yaml
@@ -171,6 +171,7 @@ spec:
       environment:
         SECRETS_PATH: "/mnt/secrets/tax-tribunals-cft"
         RAILS_ENV: "production"
+        DB_NAME: taxtribunals
         NOTIFY_CASE_CONFIRMATION_TEMPLATE_ID: "02018001-b936-4ac1-a54b-1361f6059d49"
         NOTIFY_FTT_CASE_NOTIFICATION_TEMPLATE_ID: "c2362d14-f99e-4420-b102-8d297dd3a62f"
         NOTIFY_NEW_CASE_SAVED_TEMPLATE_ID: "5b8647bd-4fa2-47eb-9f38-a36a0f33161b"
@@ -203,8 +204,6 @@ spec:
               alias: DB_PASSWORD
             - name: tt-fqdn
               alias: DB_HOST
-            - name: tt-instance-id
-              alias: DB_NAME
             - name: redis-url
               alias: REDIS_URL
             - name: external-url
