--- a/apps/fees-pay/duplicate-sr-job/demo.yaml
+++ b/apps/fees-pay/duplicate-sr-job/demo.yaml
@@ -8,8 +8,8 @@ spec:
   values:
     job:
       image: "hmctspublic.azurecr.io/payment/jobs:prod-7d98d4b-20250108105451" #{"$imagepolicy": "flux-system:demo-duplicate-sr-report"}
-      schedule: "30 2 * * *
-    environment:
-      DUMMY_RESTART_VAR: true
+      schedule: "30 2 * * *"
+      environment:
+        DUMMY_RESTART_VAR: true
     global:
       environment: demo
