--- a/apps/et/et-ccd-case-migration/demo-01.yaml
+++ b/apps/et/et-ccd-case-migration/demo-01.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     job:
-      suspend: false
+      suspend: true
       schedule: "*/15 * * * *"
       image: hmctspublic.azurecr.io/et/migration:prod-6abf71d-20250108144138 #{"$imagepolicy": "flux-system:et-ccd-case-migration"}
       environment:
