--- a/apps/labs/sbox/base/kustomization.yaml
+++ b/apps/labs/sbox/base/kustomization.yaml
@@ -9,4 +9,5 @@ resources:
   - ../../labs-ieuanb74/labs-ieuanb74.yaml
   - ../../labs-endakelly-nodejs/labs-endakelly-nodejs.yaml
   - ../../labs-dawidstrozak-nodejs/labs-dawidstrozak-nodejs.yaml
+  - ../../labs-ashleigh31-nodejs/labs-ashleigh31-nodejs.yaml
 namespace: labs
