--- a/apps/sscs/sscs-cor-frontend/prod.yaml
+++ b/apps/sscs/sscs-cor-frontend/prod.yaml
@@ -11,3 +11,4 @@ spec:
         IDAM_URL: "https://hmcts-access.service.gov.uk"
         IDAM_API_URL: "https://idam-api.platform.hmcts.net"
         DUMMY: true
+        INFECTED_BLOOD_COMPENSATION_ENABLED: true
