--- a/apps/sscs/sscs-tribunals-frontend/prod.yaml
+++ b/apps/sscs/sscs-tribunals-frontend/prod.yaml
@@ -46,3 +46,4 @@ spec:
         DUMMY_PROPERTY: "false"
         WEBCHAT_OPENING_TIME_8_5: "true"
         WELSH_WEBCHAT_ENABLED: "true"
+        INFECTED_BLOOD_COMPENSATION_ENABLED: true
