--- a/apps/labs/sbox/base/kustomization.yaml
+++ b/apps/labs/sbox/base/kustomization.yaml
@@ -10,4 +10,5 @@ resources:
   - ../../labs-endakelly-nodejs/labs-endakelly-nodejs.yaml
   - ../../labs-dawidstrozak-nodejs/labs-dawidstrozak-nodejs.yaml
   - ../../labs-ashleigh31-nodejs/labs-ashleigh31-nodejs.yaml
+  - ../../labs-jamiemcconnell-nodejs/labs-jamiemcconnell-nodejs.yaml
 namespace: labs
