--- a/apps/sscs/sscs-tribunals-api/aat.yaml
+++ b/apps/sscs/sscs-tribunals-api/aat.yaml
@@ -55,7 +55,7 @@ spec:
         TRIBUNALS_HEARINGS_LISTENING_ENABLED: true
         HMC_HEARINGS_LISTENING_ENABLED: true
         ADJOURNMENT_ENABLED: true
-        HMC_DEPLOYMENT_FILTER_ENABLED: true
+        HMC_DEPLOYMENT_FILTER_ENABLED: false
         HEARINGS_CASE_UPDATE_V2_ENABLED: true
         BYPASS_HEARING_API_SERVICE: true
         AMQP_RECONNECT_ON_EXCEPTION: true
