--- a/apps/private-law/prl-cos/ithc.yaml
+++ b/apps/private-law/prl-cos/ithc.yaml
@@ -63,7 +63,7 @@ spec:
       readinessTimeout: 45
       readinessPeriod: 15
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/prl/cos:pr-2263-4d4b077-20250109110837 #{"$imagepolicy": "flux-system:ithc-prl-cos"}
+      image: hmctspublic.azurecr.io/prl/cos:pr-2263-4d4b077-20250109110837 #{"$imagepolicy": "flux-system:prl-cos"}
       environment:
         FEATURE_EXAMPLE: true
         PRD_API_BASEURL: http://rd-professional-api-ithc.service.core-compute-ithc.internal
