--- a/apps/et/et-ccd-case-migration/demo-01.yaml
+++ b/apps/et/et-ccd-case-migration/demo-01.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   values:
     job:
-      suspend: true
-      schedule: "*/15 * * * *"
+      suspend: false
+      schedule: "*/20 * * * *"
       image: hmctspublic.azurecr.io/et/migration:prod-b5e8247-20250109191941 #{"$imagepolicy": "flux-system:et-ccd-case-migration"}
       environment:
         CCD_DATA_STORE_API_BASE_URL: http://ccd-data-store-api-demo.service.core-compute-demo.internal
