--- a/apps/private-law/prl-cron-hearing-actual-task/demo.yaml
+++ b/apps/private-law/prl-cron-hearing-actual-task/demo.yaml
@@ -36,7 +36,7 @@ spec:
         AM_ROLE_ASSIGNMENT_API_URL: http://am-role-assignment-service-demo.service.core-compute-demo.internal
         HEARING_API_BASEURL: http://fis-hmc-api-demo.service.core-compute-demo.internal
         APP_ENV: "demo"
-      schedule: 0,30 * * * *
+      schedule: 0 0 * * *
     global:
       jobKind: CronJob
       enableKeyVaults: true
