--- a/apps/labs/sbox/base/kustomization.yaml
+++ b/apps/labs/sbox/base/kustomization.yaml
@@ -11,4 +11,5 @@ resources:
   - ../../labs-dawidstrozak-nodejs/labs-dawidstrozak-nodejs.yaml
   - ../../labs-ashleigh31-nodejs/labs-ashleigh31-nodejs.yaml
   - ../../labs-jamiemcconnell-nodejs/labs-jamiemcconnell-nodejs.yaml
+  - ../../labs-lukaszk-hmcts-nodejs/labs-lukaszk-hmcts-nodejs.yaml
 namespace: labs
