--- a/apps/xui/xui-webapp-integration2/demo.yaml
+++ b/apps/xui/xui-webapp-integration2/demo.yaml
@@ -41,5 +41,5 @@ spec:
         MC_BASE_URL: https://manage-case-int2.demo.platform.hmcts.net
         SERVICES_TRANSLATION_API_URL: http://ts-translation-service-demo.service.core-compute-demo.internal
         SERVICES_PAYMENTS_URL: http://payment-api-demo.service.core-compute-demo.internal
-        SERVICES_IDAM_SERVICE_OVERRIDE: false
+        SERVICES_IDAM_SERVICE_OVERRIDE: true
       image: hmctspublic.azurecr.io/xui/webapp:pr-4162-565b929-20241220142516 #{"$imagepolicy": "flux-system:demo-xui-webapp-integration2"}
