--- a/apps/xui/xui-webapp-integration1/demo.yaml
+++ b/apps/xui/xui-webapp-integration1/demo.yaml
@@ -43,5 +43,5 @@ spec:
         FEATURE_ACCESS_MANAGEMENT_ENABLED: true
         SERVICES_ROLE_ASSIGNMENT_MAPPING_API: http://am-org-role-mapping-service-demo.service.core-compute-demo.internal
         PREVIEW_DEPLOYMENT_ID: exui-preview-deployment-3303
-        SERVICES_IDAM_SERVICE_OVERRIDE: false
+        SERVICES_IDAM_SERVICE_OVERRIDE: true
       image: hmctspublic.azurecr.io/xui/webapp:pr-4162-565b929-20241220142516 #{"$imagepolicy": "flux-system:demo-xui-webapp-integration1"}
