change cronjob schedule to only 3am

--- a/apps/tax-tribunals/tax-tribunals-application/demo.yaml
+++ b/apps/tax-tribunals/tax-tribunals-application/demo.yaml
@@ -271,7 +271,7 @@ spec:
       kind: CronJob
       global:
         jobKind: CronJob
-      schedule: "*/7 * * * *"
+      schedule: "0 3 * * *"
       disableActiveClusterCheck: true
       suspend: false
       startingDeadlineSeconds: 300
