Restart Tribs pods as jms client has lost connection to evidence share prod subscription

--- a/apps/sscs/sscs-tribunals-api/prod.yaml
+++ b/apps/sscs/sscs-tribunals-api/prod.yaml
@@ -42,7 +42,7 @@ spec:
         ROBOTICS_EMAIL_FROM_SEND_GRID: noreply@mail-sscs.platform.hmcts.net
         WLU_EMAIL_FROM_SEND_GRID: noreply@mail-sscs.platform.hmcts.net
         SCOTTISH_PO_BOX_ENABLED: true
-        DUMMY_PROPERTY: false
+        DUMMY_PROPERTY: true
         ISSUE_GENERIC_LETTER: true
         UPLOAD_HEARING_FILTER_ENABLED: true
         DELETED_REDACTED_DOC_ENABLED: true
