--- a/apps/private-law/prl-citizen-frontend/perftest.yaml
+++ b/apps/private-law/prl-citizen-frontend/perftest.yaml
@@ -48,7 +48,7 @@ spec:
         TESTING_SUPPORT_FLAG: true
         ENABLE_RA_COMPONENT: true
         ENABLE_CASE_TRAIN_TRACK: true
-        ENABLE_PCQ_COMPONENT: false
+        ENABLE_PCQ_COMPONENT: true
         ALLOWED_COURTS: "*"
     global:
       environment: perftest
