update patches in kustomization.yaml

--- a/apps/financial-remedy/aat/base/kustomization.yaml
+++ b/apps/financial-remedy/aat/base/kustomization.yaml
@@ -12,3 +12,4 @@ patches:
   - path: ../../serviceaccount/aat.yaml
   - path: ../../finrem-cron-one-off-task/aat/aat.yaml
   - path: ../../finrem-cron-draft-order-review-overdue/aat/aat.yaml
+  - path: ../../finrem-cron-draft-order-review-overdue/prod/prod.yaml
