Add back sidekiq to demo.yaml

--- a/apps/tax-tribunals/tax-tribunals-application/demo.yaml
+++ b/apps/tax-tribunals/tax-tribunals-application/demo.yaml
@@ -156,122 +156,10 @@ spec:
               alias: DYNATRACE_UI_TRACKING_ID
 
     sidekiq:
-      applicationPort: 7433
-      readinessPath: /health
-      livenessPath: /health
-      startupPath: /health
-      image: hmctspublic.azurecr.io/tax-tribunals/application:pr-387-b9aeb3b-20250110103538
       args: ['./sidekiq.sh']
-      useWorkloadIdentity: true
-      memoryRequests: "2Gi"
-      cpuRequests: "500m"
-      memoryLimits: "3Gi"
-      # set for aat and preview, overridden in flux for other environments
-      workloadClientID: "0af403db-e3ab-450b-bcde-884101a065cd"
-      environment:
-        SECRETS_PATH: "/mnt/secrets/tax-tribunals-cft"
-        RAILS_ENV: "production"
-        DB_NAME: taxtribunals
-        NOTIFY_CASE_CONFIRMATION_TEMPLATE_ID: "02018001-b936-4ac1-a54b-1361f6059d49"
-        NOTIFY_FTT_CASE_NOTIFICATION_TEMPLATE_ID: "c2362d14-f99e-4420-b102-8d297dd3a62f"
-        NOTIFY_NEW_CASE_SAVED_TEMPLATE_ID: "5b8647bd-4fa2-47eb-9f38-a36a0f33161b"
-        NOTIFY_CHANGE_PASSWORD_TEMPLATE_ID: "ed74621e-2b69-490f-bb5b-e3b6c10fbfcf"
-        NOTIFY_RESET_PASSWORD_TEMPLATE_ID: "3b5d975b-1448-42c0-b311-8ee9ae2df6d0"
-        NOTIFY_CASE_FIRST_REMINDER_TEMPLATE_ID: "d5a4d9f8-4f3f-471a-98c8-e5aecc0a63cb"
-        NOTIFY_CASE_LAST_REMINDER_TEMPLATE_ID: "4f263af7-b9b0-4eeb-a6f0-9815125479a1"
-        NOTIFY_REPORT_PROBLEM_TEMPLATE_ID: "6449ed0c-1424-4977-829b-4ce3efb04bcb"
-        NOTIFY_SEND_APPLICATION_DETAIL_TEMPLATE_ID: "aa55e7f3-d26b-411c-bba9-1e3b55815814"
-        NOTIFY_SEND_APPLICATION_DETAIL_TEXT_TEMPLATE_ID: "f1f4a25e-9a85-4dd7-9d97-2e3dbd103b38"
-        NOTIFY_GLIMR_GENERATION_COMPLETE_ID: "1c3306da-c99a-492a-96a4-c553dc8732de"
-        # Welsh GovNotify trial templates
-        NOTIFY_CASE_CONFIRMATION_CY_TEMPLATE_ID: "800d447f-ec3e-4994-b32e-c6c1302c8b43"
-        NOTIFY_FTT_CASE_NOTIFICATION_CY_TEMPLATE_ID: "c2362d14-f99e-4420-b102-8d297dd3a62f"
-        NOTIFY_NEW_CASE_SAVED_CY_TEMPLATE_ID: "72008d89-cd28-42f8-8b69-53b4ac27561d"
-        NOTIFY_CHANGE_PASSWORD_CY_TEMPLATE_ID: "55370725-5926-4733-b139-aaee70d08562"
-        NOTIFY_RESET_PASSWORD_CY_TEMPLATE_ID: "2ed5aede-caa9-4d39-9696-7bb2f1256ad5c"
-        NOTIFY_CASE_FIRST_REMINDER_CY_TEMPLATE_ID: "6463b3f8-6aa9-40c9-9fdb-f13bd5b1f905"
-        NOTIFY_CASE_LAST_REMINDER_CY_TEMPLATE_ID: "4bbd075a-2a5d-4146-93a6-dc53435a5f64"
-        NOTIFY_SEND_APPLICATION_DETAIL_CY_TEMPLATE_ID: "be590b09-7371-4f46-8c6e-3393df5faef4"
-        NOTIFY_SEND_APPLICATION_DETAIL_TEXT_CY_TEMPLATE_ID: "0654c83d-842c-4464-bdbf-a14160cde0c3"
-      keyVaults:
-        tax-tribunals-cft:
-          secrets:
-            - name: secret-key-base
-              alias: SECRET_KEY_BASE
-            - name: tt-username
-              alias: DB_USERNAME
-            - name: tt-password
-              alias: DB_PASSWORD
-            - name: tt-fqdn
-              alias: DB_HOST
-            - name: redis-url
-              alias: REDIS_URL
-            - name: external-url
-              alias: EXTERNAL_URL
-            - name: tax-tribunals-downloader-url
-              alias: TAX_TRIBUNALS_DOWNLOADER_URL
-            - name: glimr-api-url
-              alias: GLIMR_API_URL
-            - name: glimr-direct-api-url
-              alias: GLIMR_DIRECT_API_URL
-            - name: glimr-direct-enabled
-              alias: GLIMR_DIRECT_ENABLED
-            - name: upload-problems-report-auth-user
-              alias: UPLOAD_PROBLEMS_REPORT_AUTH_USER
-            - name: upload-problems-report-auth-digest
-              alias: UPLOAD_PROBLEMS_REPORT_AUTH_DIGEST
-            - name: admin-username
-              alias: ADMIN_USERNAME
-            - name: admin-password
-              alias: ADMIN_PASSWORD
-            - name: govuk-notify-api-key
-              alias: GOVUK_NOTIFY_API_KEY
-            - name: report-problem-email-address
-              alias: REPORT_PROBLEM_EMAIL_ADDRESS
-            - name: tax-tribunal-email
-              alias: TAX_TRIBUNAL_EMAIL
-            - name: zendesk-username
-              alias: ZENDESK_USERNAME
-            - name: zendesk-token
-              alias: ZENDESK_TOKEN
-            - name: sauce-username
-              alias: SAUCE_USERNAME
-            - name: sauce-access-key
-              alias: SAUCE_ACCESS_KEY
-            - name: disable-rack-attack-safelists
-              alias: DISABLE_RACK_ATTACK_SAFELISTS
-            - name: address-lookup-endpoint
-              alias: ADDRESS_LOOKUP_ENDPOINT
-            - name: address-lookup-api-key
-              alias: ADDRESS_LOOKUP_API_KEY
-            - name: address-lookup-api-secret
-              alias: ADDRESS_LOOKUP_API_SECRET
-            - name: maintenance-enabled
-              alias: MAINTENANCE_ENABLED
-            - name: maintenance-allowed-ips
-              alias: MAINTENANCE_ALLOWED_IPS
-            - name: azure-storage-account
-              alias: AZURE_STORAGE_ACCOUNT
-            - name: azure-storage-key
-              alias: AZURE_STORAGE_KEY
-            - name: azure-storage-container
-              alias: AZURE_STORAGE_CONTAINER
-            - name: app-insights-instrumentation-key
-              alias: APP_INSIGHTS_INSTRUMENTATION_KEY
-            - name: dynatrace-ui-tracking-id
-              alias: DYNATRACE_UI_TRACKING_ID
-            - name: test-loading-env-v1
-              alias: TEST_ENV_ID
 
     job:
-      image: hmctspublic.azurecr.io/tax-tribunals/application:pr-387-b9aeb3b-20250110103538
-      useWorkloadIdentity: true
-      # set for aat and preview, overridden in flux for other environments
-      workloadClientID: "0af403db-e3ab-450b-bcde-884101a065cd"
-      kind: CronJob
-      global:
-        jobKind: CronJob
-      schedule: "0 3 * * *"
+      schedule: "*/5 * * *"
       disableActiveClusterCheck: true
       suspend: false
       startingDeadlineSeconds: 300
@@ -281,95 +169,3 @@ spec:
       command:
         - "bin/rails"
         - "daily_tasks"
-      environment:
-        SECRETS_PATH: "/mnt/secrets/tax-tribunals-cft"
-        RAILS_ENV: 'production'
-        DB_NAME: taxtribunals
-        NOTIFY_CASE_CONFIRMATION_TEMPLATE_ID: "02018001-b936-4ac1-a54b-1361f6059d49"
-        NOTIFY_FTT_CASE_NOTIFICATION_TEMPLATE_ID: "c2362d14-f99e-4420-b102-8d297dd3a62f"
-        NOTIFY_NEW_CASE_SAVED_TEMPLATE_ID: "5b8647bd-4fa2-47eb-9f38-a36a0f33161b"
-        NOTIFY_CHANGE_PASSWORD_TEMPLATE_ID: "ed74621e-2b69-490f-bb5b-e3b6c10fbfcf"
-        NOTIFY_RESET_PASSWORD_TEMPLATE_ID: "3b5d975b-1448-42c0-b311-8ee9ae2df6d0"
-        NOTIFY_CASE_FIRST_REMINDER_TEMPLATE_ID: "d5a4d9f8-4f3f-471a-98c8-e5aecc0a63cb"
-        NOTIFY_CASE_LAST_REMINDER_TEMPLATE_ID: "4f263af7-b9b0-4eeb-a6f0-9815125479a1"
-        NOTIFY_REPORT_PROBLEM_TEMPLATE_ID: "6449ed0c-1424-4977-829b-4ce3efb04bcb"
-        NOTIFY_SEND_APPLICATION_DETAIL_TEMPLATE_ID: "aa55e7f3-d26b-411c-bba9-1e3b55815814"
-        NOTIFY_SEND_APPLICATION_DETAIL_TEXT_TEMPLATE_ID: "f1f4a25e-9a85-4dd7-9d97-2e3dbd103b38"
-        NOTIFY_GLIMR_GENERATION_COMPLETE_ID: "1c3306da-c99a-492a-96a4-c553dc8732de"
-        # Welsh GovNotify trial templates
-        NOTIFY_CASE_CONFIRMATION_CY_TEMPLATE_ID: "800d447f-ec3e-4994-b32e-c6c1302c8b43"
-        NOTIFY_FTT_CASE_NOTIFICATION_CY_TEMPLATE_ID: "c2362d14-f99e-4420-b102-8d297dd3a62f"
-        NOTIFY_NEW_CASE_SAVED_CY_TEMPLATE_ID: "72008d89-cd28-42f8-8b69-53b4ac27561d"
-        NOTIFY_CHANGE_PASSWORD_CY_TEMPLATE_ID: "55370725-5926-4733-b139-aaee70d08562"
-        NOTIFY_RESET_PASSWORD_CY_TEMPLATE_ID: "2ed5aede-caa9-4d39-9696-7bb2f1256ad5c"
-        NOTIFY_CASE_FIRST_REMINDER_CY_TEMPLATE_ID: "6463b3f8-6aa9-40c9-9fdb-f13bd5b1f905"
-        NOTIFY_CASE_LAST_REMINDER_CY_TEMPLATE_ID: "4bbd075a-2a5d-4146-93a6-dc53435a5f64"
-        NOTIFY_SEND_APPLICATION_DETAIL_CY_TEMPLATE_ID: "be590b09-7371-4f46-8c6e-3393df5faef4"
-        NOTIFY_SEND_APPLICATION_DETAIL_TEXT_CY_TEMPLATE_ID: "0654c83d-842c-4464-bdbf-a14160cde0c3"
-      keyVaults:
-        tax-tribunals-cft:
-          secrets:
-            - name: secret-key-base
-              alias: SECRET_KEY_BASE
-            - name: tt-username
-              alias: DB_USERNAME
-            - name: tt-password
-              alias: DB_PASSWORD
-            - name: tt-fqdn
-              alias: DB_HOST
-            - name: redis-url
-              alias: REDIS_URL
-            - name: external-url
-              alias: EXTERNAL_URL
-            - name: tax-tribunals-downloader-url
-              alias: TAX_TRIBUNALS_DOWNLOADER_URL
-            - name: glimr-api-url
-              alias: GLIMR_API_URL
-            - name: glimr-direct-api-url
-              alias: GLIMR_DIRECT_API_URL
-            - name: glimr-direct-enabled
-              alias: GLIMR_DIRECT_ENABLED
-            - name: upload-problems-report-auth-user
-              alias: UPLOAD_PROBLEMS_REPORT_AUTH_USER
-            - name: upload-problems-report-auth-digest
-              alias: UPLOAD_PROBLEMS_REPORT_AUTH_DIGEST
-            - name: admin-username
-              alias: ADMIN_USERNAME
-            - name: admin-password
-              alias: ADMIN_PASSWORD
-            - name: govuk-notify-api-key
-              alias: GOVUK_NOTIFY_API_KEY
-            - name: report-problem-email-address
-              alias: REPORT_PROBLEM_EMAIL_ADDRESS
-            - name: tax-tribunal-email
-              alias: TAX_TRIBUNAL_EMAIL
-            - name: zendesk-username
-              alias: ZENDESK_USERNAME
-            - name: zendesk-token
-              alias: ZENDESK_TOKEN
-            - name: sauce-username
-              alias: SAUCE_USERNAME
-            - name: sauce-access-key
-              alias: SAUCE_ACCESS_KEY
-            - name: disable-rack-attack-safelists
-              alias: DISABLE_RACK_ATTACK_SAFELISTS
-            - name: address-lookup-endpoint
-              alias: ADDRESS_LOOKUP_ENDPOINT
-            - name: address-lookup-api-key
-              alias: ADDRESS_LOOKUP_API_KEY
-            - name: address-lookup-api-secret
-              alias: ADDRESS_LOOKUP_API_SECRET
-            - name: maintenance-enabled
-              alias: MAINTENANCE_ENABLED
-            - name: maintenance-allowed-ips
-              alias: MAINTENANCE_ALLOWED_IPS
-            - name: azure-storage-account
-              alias: AZURE_STORAGE_ACCOUNT
-            - name: azure-storage-key
-              alias: AZURE_STORAGE_KEY
-            - name: azure-storage-container
-              alias: AZURE_STORAGE_CONTAINER
-            - name: dynatrace-ui-tracking-id
-              alias: DYNATRACE_UI_TRACKING_ID
-            - name: test-loading-env-v1
-              alias: TEST_ENV_ID
