fix schedule syntax error

--- a/apps/tax-tribunals/tax-tribunals-application/demo.yaml
+++ b/apps/tax-tribunals/tax-tribunals-application/demo.yaml
@@ -159,7 +159,7 @@ spec:
       args: ['./sidekiq.sh']
 
     job:
-      schedule: "*/5 * * *"
+      schedule: "*/5 * * * *"
       disableActiveClusterCheck: true
       suspend: false
       startingDeadlineSeconds: 300
