Redeploy all probate pods in all envs.

--- a/apps/probate/probate-business-service/probate-business-service.yaml
+++ b/apps/probate/probate-business-service/probate-business-service.yaml
@@ -13,7 +13,7 @@ spec:
       image: hmctspublic.azurecr.io/probate/business-service:prod-9cfcb82-20250110124256 #{"$imagepolicy": "flux-system:probate-business-service"}
       environment:
         # Does what it says on the tin - if this changes then all envs should redeploy
-        CHANGE_TO_REDEPLOY_ALL_ENVS: abc
+        CHANGE_TO_REDEPLOY_ALL_ENVS: abcd
   chart:
     spec:
       chart: ./stable/probate-business-service
