--- a/apps/probate/probate-caveats-fe/probate-caveats-fe.yaml
+++ b/apps/probate/probate-caveats-fe/probate-caveats-fe.yaml
@@ -12,7 +12,7 @@ spec:
       image: hmctspublic.azurecr.io/probate/caveats-fe:prod-1c3bcbd-20250110162833 #{"$imagepolicy": "flux-system:probate-caveats-fe"}
       environment:
         # Does what it says on the tin - if this changes then all envs should redeploy
-        CHANGE_TO_REDEPLOY_ALL_ENVS: abc
+        CHANGE_TO_REDEPLOY_ALL_ENVS: abcd
   chart:
     spec:
       chart: ./stable/probate-caveats-fe
