--- a/apps/probate/probate-frontend/probate-frontend.yaml
+++ b/apps/probate/probate-frontend/probate-frontend.yaml
@@ -16,7 +16,7 @@ spec:
       image: hmctspublic.azurecr.io/probate/frontend:prod-593e182-20250109112324 #{"$imagepolicy": "flux-system:probate-frontend"}
       environment:
         # Does what it says on the tin - if this changes then all envs should redeploy
-        CHANGE_TO_REDEPLOY_ALL_ENVS: abc
+        CHANGE_TO_REDEPLOY_ALL_ENVS: abcd
   chart:
     spec:
       chart: ./stable/probate-frontend
