--- a/apps/probate/probate-orchestrator-service/probate-orchestrator-service.yaml
+++ b/apps/probate/probate-orchestrator-service/probate-orchestrator-service.yaml
@@ -19,7 +19,7 @@ spec:
       image: hmctspublic.azurecr.io/probate/orchestrator-service:prod-f8c6d85-20250110122134 #{"$imagepolicy": "flux-system:probate-orchestrator-service"}
       environment:
         # Does what it says on the tin - if this changes then all envs should redeploy
-        CHANGE_TO_REDEPLOY_ALL_ENVS: abc
+        CHANGE_TO_REDEPLOY_ALL_ENVS: abcd
   chart:
     spec:
       chart: ./stable/probate-orchestrator-service
