--- a/apps/probate/probate-back-office/probate-back-office.yaml
+++ b/apps/probate/probate-back-office/probate-back-office.yaml
@@ -13,7 +13,7 @@ spec:
       image: hmctspublic.azurecr.io/probate/back-office:prod-6707e09-20250109124038 #{"$imagepolicy": "flux-system:probate-back-office"}
       environment:
         # Does what it says on the tin - if this changes then all envs should redeploy
-        CHANGE_TO_REDEPLOY_ALL_ENVS: abc
+        CHANGE_TO_REDEPLOY_ALL_ENVS: abcd
   chart:
     spec:
       chart: ./stable/probate-back-office
