--- a/apps/probate/probate-submit-service/probate-submit-service.yaml
+++ b/apps/probate/probate-submit-service/probate-submit-service.yaml
@@ -19,7 +19,7 @@ spec:
       image: hmctspublic.azurecr.io/probate/submit-service:prod-2e1ee4b-20250110163107 #{"$imagepolicy": "flux-system:probate-submit-service"}
       environment:
         # Does what it says on the tin - if this changes then all envs should redeploy
-        CHANGE_TO_REDEPLOY_ALL_ENVS: abc
+        CHANGE_TO_REDEPLOY_ALL_ENVS: abcd
   chart:
     spec:
       chart: ./stable/probate-submit-service
