move path to prod folder

--- a/apps/financial-remedy/prod/base/kustomization.yaml
+++ b/apps/financial-remedy/prod/base/kustomization.yaml
@@ -9,3 +9,4 @@ patches:
   - path: ../../finrem-cos/prod.yaml
   - path: ../../serviceaccount/prod.yaml
   - path: ../../finrem-cron-one-off-task/prod/prod.yaml
+  - path: ../../finrem-cron-draft-order-review-overdue/prod/prod.yaml
