--- a/apps/adoption/base/kustomization.yaml
+++ b/apps/adoption/base/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
   - ../adoption-cron-draft-case-deletion-alert/adoption-cron-draft-case-deletion-alert.yaml
   - ../adoption-cron-multi-child-draft-application-alert/adoption-cron-multi-child-draft-application-alert.yaml
   - ../adoption-cron-submit-application-to-court-alerts/adoption-cron-submit-application-to-court-alerts.yaml
+  - ../adoption-cron-ccd-data-migration-tool/adoption-cron-ccd-data-migration-tool.yaml
   - ../../base/workload-identity
 namespace: adoption
