--- a/apps/financial-remedy/prod/base/kustomization.yaml
+++ b/apps/financial-remedy/prod/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../finrem-cron-one-off-task/finrem-cron-one-off-task.yaml
+  - ../../finrem-cron-draft-order-review-overdue/finrem-cron-draft-order-review-overdue.yaml
   - ../../../base/slack-provider/prod
 namespace: financial-remedy
 patches:
