--- a/apps/private-law/prl-citizen-frontend/prod.yaml
+++ b/apps/private-law/prl-citizen-frontend/prod.yaml
@@ -18,13 +18,13 @@ spec:
         DOCUMENT_MANAGEMENT_URL: http://ccd-case-document-am-api-prod.service.core-compute-prod.internal
         COS_URL: http://prl-cos-prod.service.core-compute-prod.internal
         REDIS_HOST: prl-citizen-frontend-secondary-redis-aat.redis.cache.windows.net
-        REASONABLE_ADJUSTMENTS: https://cui-ra.aat.platform.hmcts.net
+        REASONABLE_ADJUSTMENTS: https://manage-your-support-for-hmcts-services.service.gov.uk
         FACT_URL: http://fact-api-prod.service.core-compute-prod.internal
         EQUALITY_URL: https://pcq.aat.platform.hmcts.net
         LAUNCH_DARKLY_OFFLINE_MODE: false
         C100_REBUILD_FLAG: true
-        TESTING_SUPPORT_FLAG: true
+        TESTING_SUPPORT_FLAG: false
         ENABLE_RA_COMPONENT: true
         ENABLE_CASE_TRAIN_TRACK: false
         ENABLE_PCQ_COMPONENT: true
-        ALLOWED_COURTS: Swansea Civil Justice Centre
+        ALLOWED_COURTS: Swansea Civil Justice Centre,Kingston-upon-Hull Combined Court Centre,Grimsby Combined Court Centre
