--- a/apps/ia/ia-cron-ccd-migration-tool/demo-00.yaml
+++ b/apps/ia/ia-cron-ccd-migration-tool/demo-00.yaml
@@ -6,8 +6,8 @@ spec:
   releaseName: ia-cron-ccd-migration-tool
   values:
     job:
-      schedule: "30 10 12 11 *"
-      image: hmctspublic.azurecr.io/ia/cron-ccd-migration-tool:prod-d23f08e-20241119132221 #{"$imagepolicy": "flux-system:demo-ia-cron-ccd-migration-tool"}
+      schedule: "20 14 14 1 *"
+      image: hmctspublic.azurecr.io/ia/cron-ccd-migration-tool:pr-174-05ac03d-20250114130051 #{"$imagepolicy": "flux-system:demo-ia-cron-ccd-migration-tool"}
       cpuRequests: "1000m"
       cpuLimits: "2500m"
       memoryRequests: "1024Mi"
@@ -18,11 +18,12 @@ spec:
         MIGRATE_LEGACY_CASE_FLAGS: "false"
         MIGRATE_CLEAR_LEGACY_CASE_FLAGS: "false"
         MIGRATE_CASE_FLAGS_INTERNAL: "false"
-        MIGRATION_NUMBER_OF_CASES: 20000
+        MIGRATION_NUMBER_OF_CASES: 2
         MIGRATE_APPELLANT_INTERPRETER_LANGUAGES_CASE: "false"
         MIGRATE_APPEALS_REF_DATA_LOCATION_FLAG: "false"
         MIGRATION_NUMBER_OF_THREADS: 20
         SERVICE_ID: BFA1
         LOCATION_REF_DATA_URL: "http://rd-location-ref-api-demo.service.core-compute-demo.internal"
-        MIGRATION_CASE_ID: 1721041488385667,1711125479412028,1711125604215247,1711125635460150,1711125676071874,1711125704587651,1606229697208842,1606229922775904
-        MIGRATE_IS_ARIA_MIGRATED: true
+        #MIGRATION_CASE_ID: 1721041488385667,1711125479412028,1711125604215247,1711125635460150,1711125676071874,1711125704587651,1606229697208842,1606229922775904
+        MIGRATE_IS_ARIA_MIGRATED: "false"
+        MIGRATE_DRAFT_TTL_SET: "true"
