Initial flux config for TTL migration

--- a/apps/nfdiv/demo/base/kustomization.yaml
+++ b/apps/nfdiv/demo/base/kustomization.yaml
@@ -30,6 +30,7 @@ resources:
   - ../../nfdiv-ccd-case-migration/nfdiv-ccd-case-migration.yaml
   - ../../nfdiv-cron-states-report/nfdiv-cron-states-report.yaml
   - ../../nfdiv-cron-create-service-request/nfdiv-cron-create-service-request.yaml
+  - ../../nfdiv-cron-set-time-to-live/nfdiv-cron-set-time-to-live.yaml
   - ../../../rbac/nonprod-role.yaml
   - ../../../base/slack-provider/demo
 patches:
@@ -64,3 +65,4 @@ patches:
   - path: ../../nfdiv-ccd-case-migration/demo.yaml
   - path: ../../nfdiv-cron-states-report/demo.yaml
   - path: ../../nfdiv-cron-create-service-request/demo.yaml
+  - path: ../../nfdiv-cron-set-time-to-live/demo.yaml
