--- a/apps/nfdiv/aat/base/kustomization.yaml
+++ b/apps/nfdiv/aat/base/kustomization.yaml
@@ -30,6 +30,7 @@ resources:
   - ../../nfdiv-ccd-case-migration/nfdiv-ccd-case-migration.yaml
   - ../../nfdiv-cron-states-report/nfdiv-cron-states-report.yaml
   - ../../nfdiv-cron-create-service-request/nfdiv-cron-create-service-request.yaml
+  - ../../nfdiv-cron-set-time-to-live/nfdiv-cron-set-time-to-live.yaml
   - ../../../rbac/nonprod-role.yaml
   - ../../../base/slack-provider/aat
 patches:
@@ -65,3 +66,4 @@ patches:
   - path: ../../nfdiv-ccd-case-migration/aat.yaml
   - path: ../../nfdiv-cron-states-report/aat.yaml
   - path: ../../nfdiv-cron-create-service-request/aat.yaml
+  - path: ../../nfdiv-cron-set-time-to-live/aat.yaml
