--- a/apps/nfdiv/prod/base/kustomization.yaml
+++ b/apps/nfdiv/prod/base/kustomization.yaml
@@ -31,6 +31,7 @@ resources:
   - ../../nfdiv-ccd-case-migration/nfdiv-ccd-case-migration.yaml
   - ../../nfdiv-cron-states-report/nfdiv-cron-states-report.yaml
   - ../../nfdiv-cron-create-service-request/nfdiv-cron-create-service-request.yaml
+  - ../../nfdiv-cron-create-service-request/nfdiv-cron-set-time-to-live.yaml
   - ../../../base/slack-provider/prod
 namespace: nfdiv
 patches:
@@ -66,3 +67,4 @@ patches:
   - path: ../../nfdiv-ccd-case-migration/prod.yaml
   - path: ../../nfdiv-cron-states-report/prod.yaml
   - path: ../../nfdiv-cron-create-service-request/prod.yaml
+  - path: ../../nfdiv-cron-set-time-to-live/prod.yaml
