rerun script to test api change

--- a/apps/cnp/preview/aso/cnp-postgres.yaml
+++ b/apps/cnp/preview/aso/cnp-postgres.yaml
@@ -1,4 +1,4 @@
-apiVersion: dbforpostgresql.azure.com/v1api20230601preview
+apiVersion: dbforpostgresql.azure.com/v1api20210601
 kind: FlexibleServer
 metadata:
   name: ${NAMESPACE}-${ENVIRONMENT}
