Configuring the cron job

--- a/apps/private-law/prl-cron-hwf-process-awp/prod.yaml
+++ b/apps/private-law/prl-cron-hwf-process-awp/prod.yaml
@@ -23,7 +23,7 @@ spec:
         SEND_LETTER_URL: http://rpe-send-letter-service-prod.service.core-compute-prod.internal
         XUI_URL: https://manage-case.platform.hmcts.net/cases/case-details
         CITIZEN_URL: www.apply-to-court-about-child-arrangements-c100.service.gov.uk
-      schedule: 0 5 31 2 *
+      schedule: 0 * * * *
     global:
       jobKind: CronJob
       enableKeyVaults: true
