ADOP-2555: run migration on 10 cases

--- a/apps/adoption/adoption-cron-ccd-data-migration-tool/prod/00.yaml
+++ b/apps/adoption/adoption-cron-ccd-data-migration-tool/prod/00.yaml
@@ -6,9 +6,9 @@ spec:
   releaseName: adoption-cron-ccd-data-migration-tool
   values:
     job:
-      schedule: "30 12 30 2 *"
+      schedule: "25 19 14 01"
       environment:
         ENABLED: true
-        MIGRATION_ID: ADOP-log
+        MIGRATION_ID: ADOP-2555
         IDAM_API_URL: https://idam-api.platform.hmcts.net
         USE_CASE_ID_MAPPING: true
