--- a/apps/adoption/adoption-cron-ccd-data-migration-tool/prod/00.yaml
+++ b/apps/adoption/adoption-cron-ccd-data-migration-tool/prod/00.yaml
@@ -6,7 +6,7 @@ spec:
   releaseName: adoption-cron-ccd-data-migration-tool
   values:
     job:
-      schedule: "25 19 14 01"
+      schedule: "30 19 14 01 *"
       environment:
         ENABLED: true
         MIGRATION_ID: ADOP-2555
