--- a/apps/adoption/adoption-cron-ccd-data-migration-tool/prod.yaml
+++ b/apps/adoption/adoption-cron-ccd-data-migration-tool/prod.yaml
@@ -12,9 +12,10 @@ spec:
       cpuLimits: "2500m"
       memoryRequests: "1024Mi"
       memoryLimits: "2048Mi"
-      schedule: "30 12 30 2 *"
+      schedule: "05 20 14 01 *"
       environment:
-        MIGRATION_ID: ADOP-log
+        MIGRATION_ID: ADOP-2555
+        USE_CASE_ID_MAPPING: true
         ENABLED: false
         UPDATE: rollback
         IDAM_REDIRECT_URL: https://adoption-web.platform.hmcts.net/receiver
