--- a/apps/adoption/adoption-cron-ccd-data-migration-tool/prod.yaml
+++ b/apps/adoption/adoption-cron-ccd-data-migration-tool/prod.yaml
@@ -16,7 +16,7 @@ spec:
       environment:
         MIGRATION_ID: ADOP-2555
         USE_CASE_ID_MAPPING: true
-        ENABLED: false
+        ENABLED: true
         UPDATE: rollback
         IDAM_REDIRECT_URL: https://adoption-web.platform.hmcts.net/receiver
         IDAM_S2S_URL: http://rpe-service-auth-provider-prod.service.core-compute-prod.internal
