adop-2555: schedule migration for 20:10

--- a/apps/adoption/adoption-cron-ccd-data-migration-tool/adoption-cron-ccd-data-migration-tool.yaml
+++ b/apps/adoption/adoption-cron-ccd-data-migration-tool/adoption-cron-ccd-data-migration-tool.yaml
@@ -10,10 +10,11 @@ spec:
     job:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/adoption/cron-ccd-data-migration-tool:prod-cff7e78-20250114122452 #{"$imagepolicy": "flux-system:adoption-cron-ccd-data-migration-tool"}
-      schedule: "30 12 30 2 *"
+      schedule: "10 20 14 01 *"
       environment:
-        MIGRATION_ID: ADOP-log
-        ENABLED: false
+        MIGRATION_ID: ADOP-2555
+        ENABLED: true
+        USE_CASE_ID_MAPPING: true
         UPDATE: migration
         DEFAULT_THREAD_LIMIT: 25
         DEFAULT_QUERY_SIZE: 100
