--- a/apps/adoption/adoption-cron-ccd-data-migration-tool/adoption-cron-ccd-data-migration-tool.yaml
+++ b/apps/adoption/adoption-cron-ccd-data-migration-tool/adoption-cron-ccd-data-migration-tool.yaml
@@ -10,13 +10,14 @@ spec:
     job:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/adoption/cron-ccd-data-migration-tool:prod-cff7e78-20250114122452 #{"$imagepolicy": "flux-system:adoption-cron-ccd-data-migration-tool"}
-      schedule: "20 20 14 01 *"
+      schedule: "35 20 14 01 *"
       environment:
         MIGRATION_ID: ADOP-2555
         USE_CASE_ID_MAPPING: true
         ENABLED: true
         UPDATE: rollback
-        IDAM_REDIRECT_URL: https://adoption-web.platform.hmcts.net/receiver
+        IDAM_REDIRECT_URL: https://apply-to-adopt-a-child-placed-in-your-care.service.gov.uk/receiver
+        IDAM_CLIENT_ID: adoption-web
         IDAM_S2S_URL: http://rpe-service-auth-provider-prod.service.core-compute-prod.internal
         IDAM_API_URL: https://idam-api.platform.hmcts.net
         CCD_DATA_STORE_API_BASE_URL: http://ccd-data-store-api-prod.service.core-compute-prod.internal
