--- a/apps/adoption/adoption-cron-ccd-data-migration-tool/adoption-cron-ccd-data-migration-tool.yaml
+++ b/apps/adoption/adoption-cron-ccd-data-migration-tool/adoption-cron-ccd-data-migration-tool.yaml
@@ -10,10 +10,10 @@ spec:
     job:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/adoption/cron-ccd-data-migration-tool:prod-cff7e78-20250114122452 #{"$imagepolicy": "flux-system:adoption-cron-ccd-data-migration-tool"}
-      schedule: "42 20 14 01 *"
+      schedule: "58 20 14 01 *"
       environment:
         MIGRATION_ID: ADOP-2555
-        USE_CASE_ID_MAPPING: false
+        USE_CASE_ID_MAPPING: true
         ENABLED: true
         UPDATE: rollback
         IDAM_REDIRECT_URL: https://apply-to-adopt-a-child-placed-in-your-care.service.gov.uk/receiver
